--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="calc" class="calc flex flex-col justify-between items-stretch mx-auto max-w-lg bg-gray-50 text-gray-600 shadow-2xl touch-manipulation">
-        <div class="times p-2 md:p-4 w-full text-right text-lg md:text-xl">保險：<span class="insurance mr-4">-4</span>A：<span class="a-number mr-4">4</span>真數：<span class="real-number mr-4">0</span>次數：<span class="count">0</span></div>
+        <div class="times p-2 md:p-4 w-full text-right text-lg md:text-xl">A：<span class="a-number mr-4">4</span>真數：<span class="real-number mr-4">0</span>次數：<span class="count">0</span></div>
         <div class="history h-full overflow-y-scroll flex flex-col-reverse space-y-8 space-y-reverse px-4">
         </div>
         <div class="keyboard h-min">
@@ -49,7 +49,6 @@ let history = [];
 let count = document.querySelector('.count');
 let realNumber = document.querySelector('.real-number');
 let aNumber = document.querySelector('.a-number');
-let insuranceNumber = document.querySelector('.insurance');
 let historyArea = document.querySelector('.history');
 
 const add0 = (number) => {
@@ -112,8 +111,6 @@ const updateCount = () => {
     realNumber.innerHTML = real;
     let aTrack = roundDown(aCards / roundDown((cards / 52), 2), 2);
     aNumber.innerHTML = aTrack;
-    let insurance = (sum - aCards) < 0 ? roundDown(Math.abs(sum - aCards) / roundDown((cards / 52), 2), 2) * -1 : roundDown(Math.abs(sum - aCards) / roundDown((cards / 52), 2), 2);
-    insuranceNumber.innerHTML = insurance;
 };
 
 const createHistory = (data) => {
